--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <label for="name">Zip-Code </label><br>
                 <input type="text" name="name" id="postal-code" required> <br><br>
 
-                <input type="submit" id="buttonAPI" value="click here"> 
+                <input type="submit" id="buttonAPI" value="VALIDATE"> 
 
             </form>
         </div>
