--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bouman-Johnson-housing-project</title>
 </head>
 <body>
-    <h1>BeCode Real Estate</h1>
+    <h1>Bouman-Johnson Housing Project</h1>
     <div class="contenaire">
         <div id="img"></div>
         <div>
